spl/tests/compile_fail/multi_token_program_missing_token_selector.stderr
error: unknown key-value directive `token::mint = ...`
  --> tests/compile_fail/multi_token_program_missing_token_selector.rs:17:9
   |
17 |         token::mint = mint,
   |         ^^^^^^^^^^^

warning: unused import: `Token2022`
 --> tests/compile_fail/multi_token_program_missing_token_selector.rs:3:31
  |
3 | use quasar_spl::{Mint, Token, Token2022, TokenProgram, Token2022Program};
  |                               ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
